--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -4,7 +4,22 @@
   <div class="row">
     <div class="col-12">
       <h1 class="text-center mt-4">To Do List</h1>
-      <div class="row" id="tasks"></div>
+    </div>
+  </div>
+  <div class="col-12 d-flex justify-content-center">
+    <label for="new-task">New Task:</label><input id="new-task" type="text" class="text-center">
+    <input id="add-task" type="submit" value="Add">
+  </div>
+  <div class="row" id="tasks">
+    <div class="col-sm-12 col-md-6">
+      <h2  class="text-center">Active</h2>
+      <div id="active-tasks">
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-6">
+      <h2 class="text-center">Completed</h2>
+      <div id="completed-tasks">
+      </div>
     </div>
   </div>
 </div>
